--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,157 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
-
-$color-dark-blue: hsl(238, 29%, 16%);
-$color-soft-red: hsl(14, 88%, 65%);
-$color-violoet: hsl(273, 75%, 66%);
-$color-gradient: linear-gradient(
-  0deg,
-  hsl(240, 73%, 65%) 0%,
-  hsl(273, 75%, 66%) 100%
-);
-$color-white: hsl(240, 5%, 91%);
-
-$color-dark-blue-2: hsl(237, 12%, 33%);
-$color-dark-blue-3: hsl(240, 6%, 50%);
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Kumbh Sans", sans-serif;
-}
-
-body {
-}
-p {
-  font-size: 12px;
-  font-weight: 700;
-  color: $color-dark-blue;
-}
-
-img {
-  width: 100%;
-}
-.container {
-  background: $color-violoet;
-  background: $color-gradient;
-  min-width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-.card {
-  max-width: 768px;
-  width: 100%;
-  margin-top: 40%;
-  border-radius: 25px;
-  display: grid;
-  grid-template-columns: 1fr;
-  background: #fff;
-  .img {
-    position: relative;
-
-    &--main {
-      width: 60%;
-      margin-top: -10%;
-      transform: translateY(-40%) translateX(30%);
-    }
-    &--bg-pattern {
-      width: 60%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      margin: -30% 0 0;
-      transform: translateX(30%);
-    }
-    &--box {
-      width: 20%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      margin: -10% 0 0;
-      transform: translateX(90%);
-    }
-  }
-  .accordion {
-    h1 {
-      color: $color-dark-blue;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    ul {
-      padding: 20px;
-      list-style: none;
-      width: 100%;
-      li {
-        display: flex;
-        flex-direction: column;
-        font-size: 12px;
-        font-weight: 400;
-        padding: 10px 0;
-        border-bottom: 1px solid $color-white;
-        .question {
-          padding: 10px 0;
-          display: flex;
-          color: $color-dark-blue-2;
-          justify-content: space-between;
-
-          &:hover {
-            cursor: pointer;
-            color: $color-soft-red !important;
-          }
-        }
-        .answer {
-          display: none;
-          padding: 10px 0;
-          color: $color-dark-blue-3;
-          padding-right: 20px;
-        }
-        img {
-          width: 10px;
-          height: 7px;
-        }
-        &.active {
-          .question {
-            color: $color-dark-blue;
-            img {
-              transform: rotate(180deg);
-            }
-          }
-          .answer {
-            display: block;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .card {
-    width: 100%;
-    margin: 0;
-    grid-template-columns: 1fr 1fr;
-    padding: 50px;
-    .img {
-      //   transform: translateY(50%);
-      &--main {
-        width: 100%;
-        margin-top: 50%;
-        margin-left: -70%;
-      }
-      &--bg-pattern {
-        margin-top: 20%;
-        margin-left: -70%;
-        width: 100%;
-      }
-      &--box {
-        margin-top: 50%;
-        margin-left: -80%;
-        width: 40%;
-      }
-    }
-  }
-}
+@import "variables";
+@import "base";
+@import "faqCard";
