--- a/styles/_faqCard.scss
+++ b/styles/_faqCard.scss
@@ -96,13 +96,14 @@
     }
     &::after {
       content: "";
-      width: 100%;
-      height: 100%;
+      width: 191px;
+      height: 184px;
       position: absolute;
       display: block;
       background: url("../images/illustration-box-desktop.svg") no-repeat;
       background-position: left bottom;
-      top: -7rem;
+      top: 50%;
+      transform: translateY(-30%);
       left: -7rem;
     }
     .list {
